# aether-rea

./: .gitignore  Dockerfile  README.md  deploy-native.sh  deploy.sh  go.mod  go.sum  proxy_test.go  wrangler.toml
.github/workflows/: build-client.yml  build-gateway.yml  build-gui-bundled.yml  release-auto.yml  release-gateway.yml
cmd/aether-client/: main.go
cmd/aether-gateway/: main.go
cmd/aether-studio/: main.go
cmd/aetherd/: main.go
deploy/: .env.example  Caddyfile  docker-compose.yml  perf-tune.sh
deploy/decoy/: Dockerfile  nginx.conf
docs/: aether-realist-protocol.md  client-go.md  deployment.md  design.md
gui/: ASSETS.md  index.html  package-lock.json  package.json  vite.config.ts
gui/src/: App.tsx  theme.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/: LogPanel.tsx
gui/src/lib/: api.ts  i18n.ts
gui/src/pages/: Connections.tsx  Dashboard.tsx  Logs.tsx  Proxy.tsx  Rules.tsx  Settings.tsx
gui/src/store/: coreStore.ts
gui/src/types/: core.ts
gui/src/utils/: format.ts
internal/api/: server.go
internal/core/: api.go  api_http.go  api_impl.go  events.go  http_proxy.go  metrics.go  perf_diag.go  persistence.go  protocol.go  protocol_bench_test.go  protocol_test.go  quic_window.go  reader.go  reader_test.go  replay_cache.go  rotation.go  session.go  session_v2.go  socks5.go  state.go
internal/systemproxy/: proxy.go  proxy_darwin.go  proxy_linux.go  proxy_other.go  proxy_windows.go
scripts/: test_config_save.go
src/: worker.js
ui/: app.js  index.html  styles.css
(+1 files in other folders)
