[package]
name = "aether-gui"
version = "0.1.0"
description = "Aether Realist GUI"
authors = ["Aether Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
